typewriter-test/tests/compile_error/unknown_language.rs
use typebridge::TypeWriter;

#[derive(TypeWriter)]
#[sync_to(ruby)]
pub struct MyStruct {
    name: String,
}

fn main() {}
